# winget-bundle

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
src/: cli.rs  main.rs  winget.rs  winget_list_parser.rs
src/command/: check.rs  cleanup.rs  edit.rs  install.rs  mod.rs
src/file/: bundlefile.pest  bundlefile.rs  lockfile.rs  mod.rs  statefile.rs
src/package_manager/: mod.rs  powershell.rs  scoop.rs  table_parser.rs  winget.rs
