[package]
name = "winget-bundle"
version = "0.1.1"
edition = "2024"
description = "A package manager wrapper for Windows (winget, msstore, and scoop), inspired by Homebrew's bundle subcommand."
license = "MIT"
repository = "https://github.com/progre/winget-bundle"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
clap = { version = "4", features = ["derive"] }
const_format = "0.2.35"
futures = "0.3.32"
itertools = "0.14.0"
pest = "2.8.6"
pest_derive = "2.8.6"
serde = { version = "1.0.228", features = ["derive"] }
smol = "2.0.2"
terminal_size = "0.4.3"
toml = "1.0.3"
unicode-width = "0.2.2"
uutils_term_grid = "0.7.0"
